--- a/css/style.css
+++ b/css/style.css
@@ -66,3 +66,18 @@ header {
 #searchBtn:hover, #prevBtn:hover, #nextBtn:hover, #resetBtn:hover {
   opacity: 0.8;
 }
+
+.card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: white;
+  border: 1px solid lightgrey;
+  border-radius: 2px;
+  width: 200px;
+  height: 200px;
+}
+
+.card img {
+  width: 150px;
+}
